updates to ensure that main branch is compliant with the tool chain for VFW portal

--- a/src/tool.yml
+++ b/src/tool.yml
@@ -69,10 +69,6 @@ tools:
           example: /in/hillslopes.tif
           extension: .tif
           description: .tif file for hillslopes.
-        hillslopes_vect:
-          example: /in/hillslopes.gpkg
-          extension: .gpkg
-          description: Vector file (GeoPackage) for hillslopes.
         elev2river:
           example: /in/elevation.tif
           extension: .tif
@@ -96,37 +92,4 @@ tools:
         soil:
           example: /in/soils.tif
           extension: .tif
-          description: .tif file for soil properties.
-    define_run_printouts:
-      title: Creates the printout times for the Model run 
-      description: |
-        Writes a file with printout times for a CATFLOW simulation.
-        This file defines how frequently outputs are saved and dispalyed during the run
-      parameters: 
-        start.time:
-          type: string
-          description: Start date for the simulation ("%d.%m.%Y %H:%M:%S")
-        end.time:
-          type: string
-          description: End date for the simulation ("%d.%m.%Y %H:%M:%S")  
-        interval:
-          type: integer
-          description: Time interval between printout times
-        time.unit:
-            type: enum
-            description: |
-              Time units of printout times (Currently only tested for hours and seonds)
-            values:
-              - hourly
-              - seconds  
-        flag:
-            type: integer
-            description: |
-              Flag controlling the amount of output at printout times, eventually a 
-              vector (1: dump all; 0: dump for surface nodes)
-            default: 1
-
-
-
-
-
+          description: .tif file for soil properties (Optional)
